--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
       <!--end of section title -->
       <div class="section-center page-info">
         <!-- about page -->
-        <p style="letter-spacing: 3px; word-spacing: 4px">
+        <p style="letter-spacing: 3px; word-spacing: 4px; text-align: justify">
           Interstellar Web Solutions was formed to provide professional web
           based services to businesses and not-for-profit organizations. We
           offer a wide range of Web Design, Web Development and Digital
@@ -132,7 +132,11 @@
           <br />
           Whether you are running a small or an international corporation,
           Interstellar Web Solutions is the platform you can trust! Our aim is
-          your satisfaction. We Design,We Create for your Success!
+          your satisfaction. <br /><br />
+          <span style="color: black; font-weight: bold"
+            >We Design,We Create
+            <span style="color: #e9b949">for your Success!</span></span
+          >
         </p>
       </div>
     </section>
