--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="underline"></div>
           </div>
           <!--end of section title -->
-          <p>
+          <p style="text-align: justify">
             Interstellar Web Solutions was formed to provide professional web
             based services to businesses and not-for-profit organizations. We
             offer a wide range of Web Design, Web Development and Android
@@ -201,7 +201,7 @@
             help build your brand, improve your global web presence, and develop
             more significant relationships with your customers.
           </p>
-          <p>
+          <p style="text-align: justify">
             Our qualified team leverages development processes, designs and
             software technologies which best suit your problem, while delivering
             solutions that delight our clients. Our motto is to build high
@@ -406,7 +406,7 @@
         <div class="card">
           <!-- front of the card -->
           <div class="card-side card-front">
-            <img src="./images/project-1.jpeg" alt="" />
+            <img src="./images/project-1.jpg" alt="" />
             <div class="card-info">
               <h4>finvest</h4>
               <p>
@@ -432,7 +432,7 @@
         <div class="card">
           <!-- front of the card -->
           <div class="card-side card-front">
-            <img src="./images/project-2.jpeg" alt="" />
+            <img src="./images/project-2.jpg" alt="" />
             <div class="card-info">
               <h4>Only Films</h4>
               <p>
@@ -458,7 +458,7 @@
         <div class="card">
           <!-- front of the card -->
           <div class="card-side card-front">
-            <img src="./images/project-3.jpeg" alt="" />
+            <img src="./images/project-3.jpg" alt="" />
             <div class="card-info">
               <h4>Fitness App</h4>
               <p>
@@ -484,7 +484,7 @@
         <div class="card">
           <!-- front of the card -->
           <div class="card-side card-front">
-            <img src="./images/project-4.jpeg" alt="" />
+            <img src="./images/project-4.jpg" alt="" />
             <div class="card-info">
               <h4>100 days of code</h4>
               <p>
