--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="nav-header">
           <a href="index.html"
             ><h1 class="my-icon">
-              Interstellar <span style="color: #e9b949">Web Solution</span>
+              Interstellar <span style="color: #e9b949">Web Solutions</span>
             </h1></a
           >
           <button class="nav-btn" id="nav-btn">
